Fix grid layout for post cards on tablet and desktop
- Fix grid layout issue for post cards on tablet and desktop in the _includes/post-card.html.
- Remove the "c-site-footer__meta" class from the _includes/post-card.html and the _sass/5-components/_site-footer.scss files.
- Add "text-align: center" to the .o-site-footer__meta class in the _sass/4-objects/_site-footer.scss file to center the footer content.

--- a/_sass/4-objects/_site-footer.scss
+++ b/_sass/4-objects/_site-footer.scss
@@ -50,6 +50,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   row-gap: tools-spacing.$space-stack-xxs;
 }
 
