--- a/_sass/5-components/_site-footer.scss
+++ b/_sass/5-components/_site-footer.scss
@@ -59,14 +59,6 @@
 }
 
 // -----------------------------------------------------------------------------
-// Footer meta wrapper
-// -----------------------------------------------------------------------------
-
-.c-site-footer__meta {
-  text-align: center;
-}
-
-// -----------------------------------------------------------------------------
 // Copyright (primary text)
 // -----------------------------------------------------------------------------
 
